--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-tiny-popover": "^7.2.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
